test/conformance/chainsaw/events/clusterpolicy/generate-mutation-events-flag/resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: game-demo
data:
  key: "some value"
