test/conformance/chainsaw/events/clusterpolicy/generate-mutation-events-flag/kyverno-configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: kyverno
  namespace: kyverno
data:
  generateMutationEvents: "true"
  generateSuccessEvents: "false"
