test/conformance/chainsaw/events/clusterpolicy/generate-mutation-events-flag/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-mutation-events-flag
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - script:
        content: kubectl patch configmap kyverno -p '{"data":{"generateMutationEvents":"true","generateSuccessEvents":"false"}}' -n kyverno
    - assert:
        file: kyverno-configmap-assert.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: add-labels
  - name: step-03
    try:
    - apply:
        file: resource.yaml
  - name: step-04
    try:
    - assert:
        file: event-assert.yaml
